--- a/Admin/Frontend/styles/cards.css
+++ b/Admin/Frontend/styles/cards.css
@@ -4,9 +4,16 @@
 	width: 200px;
 	padding: 10px;
 	display: inline-block;
-	margin:  20px;
+	margin-left:  43px;
+	text-align: center;
+	background: orange;
+	color: dark;
+	margin-right: 30px;
+	margin-top: 40px;
 
 }
+
+
 
 /*#card #top_img{
 	width: 200px;
@@ -16,9 +23,10 @@
 
 #card img{
 	margin-top: 20px;
-	margin-left: 45px;
+	margin-left: 0px;
 	width: 100px;
 	height: 100px;
+
 }
 
 #card a{
@@ -32,11 +40,16 @@
 	margin-right: 10px;
 	margin-top: 0px;
 	
+
+	
 }
+
+
 
 #card #number{
 	margin-top: 0px;
 	text-align: center;
-	font-size: 2rem;
-	margin-bottom: 0px;
+	font-size: 3rem;
+	margin-bottom: 5px;
 }
+
